--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "start": "webpack-dev-server --open"
   },
   "devDependencies": {
+    "css-loader": "4.2.1",
     "eslint": "6.1.0",
     "eslint-config-htmlacademy": "0.5.2",
     "stylelint-config-htmlacademy": "0.1.4",
+    "style-loader": "1.2.1",
     "webpack": "4.44.1",
     "webpack-cli": "3.3.12",
     "webpack-dev-server": "3.11.0"
@@ -20,5 +22,7 @@
   "engines": {
     "node": "10"
   },
-  "dependencies": {}
+  "dependencies": {
+    "flatpickr": "4.6.6"
+  }
 }
