--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
   },
   "devDependencies": {
     "css-loader": "4.2.1",
-    "eslint": "6.1.0",
+    "eslint": "^6.1.0",
     "eslint-config-htmlacademy": "0.5.2",
     "moment-locales-webpack-plugin": "1.2.0",
-    "stylelint-config-htmlacademy": "0.1.4",
     "style-loader": "1.2.1",
+    "stylelint-config-htmlacademy": "0.1.4",
     "webpack": "4.44.1",
     "webpack-cli": "3.3.12",
     "webpack-dev-server": "3.11.0"
